added passport, LoginController was written feature tests
